--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,24 +1,29 @@
+/*
+ * === Filters style ===
+ */
+
+/* Filters style */
 .filters {
-    background-color: white;
+    background-color: #ffffff;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: 1px solid #dddddd;
     border-radius: 4px;
 }
-
-button {
-    font-size: 18px;
-    background-color: #ff5a5f;
-    color: #FFFFFF;
-    height: 48px;
-    border: 0;
-    width: 20%;
+/* Search button style */
+.filters button{
+    
+    background: #ff5a5f;
     border-radius: 4px;
-    margin: 10px auto;
+    border: none;
+    color: #ffffff;
     float: right;
-    margin-right: 20px;    
+    height: 48px;
+    width: 20%;
+    font-size: 18px;
+    margin: 12px 30px;
 }
-
-button:hover {
-    opacity: 0.9;
+/*change opacity to 90% when the mouse is on the button*/
+.filters button:hover{
+    background-color: rgba(255, 90, 95, .9);
 }
