--- a/web_static/styles/102-common.css
+++ b/web_static/styles/102-common.css
@@ -5,9 +5,11 @@
 /* Global style */
 body{
     color: #484848;
-    margin: 0;
-    padding: 0;
     font: 14px Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+ }
+ html, body {
+    width: 100%;
+    overflow-x: hidden;
  }
  .container{
     margin: 30px auto;
