--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,4 +1,9 @@
-body{
-    margin: 0;
-    padding: 0;
+/*
+ * === Global style ===
+ */
+
+/* Global style */
+body {
+            margin: 0;
+            padding: 0;
 }
