--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,8 +1,16 @@
+/*
+ * === Footer style ===
+ */
+
+/* Footer style */
 footer {
-    background-color: #00FF00;
-    height: 60px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    text-align: center;
+            text-align: center;
+            background-color: #0f0;
+            height: 60px;
+            width: 100%;
+            bottom: 0;
+            justify-content: center;
+            position: absolute;
+            align-items: center;
+            display: flex;
 }
