--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,49 +1,64 @@
+/*
+ * === Filters style ===
+ */
+
+/* Filters style */
 .filters {
-    background-color: white;
+    background-color: #ffffff;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: 1px solid #dddddd;
     border-radius: 4px;
 }
-
-.locations {
-    height: 100%;
-    width: 25%;
-    border-right: 1px solid #DDDDDD;
-    display: inline-block;
-    margin-left: 40px;
-}
-
-.amenities {
-    height: 100%;
-    width: 25%;
-    display: inline-block;
-    margin-left: 40px;
-}
-
-h3 {
-    font-weight: 600;
-    margin-top: 10px;
-}
-
-h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: -12px;
-}
-button {
+/* Search button style */
+.filters button{
     font-size: 18px;
     background-color: #ff5a5f;
-    color: #FFFFFF;
     height: 48px;
-    border: 0;
     width: 20%;
     border-radius: 4px;
-    margin: 10px auto;
+    border: none;
+    color: #ffffff;
     float: right;
-    margin-right: 20px;    
+    margin: 12px 30px;
 }
 
-button:hover {
-    opacity: 0.9;
+/*change opacity to 90% when the mouse is on the button*/
+.filters button:hover{
+    background-color: rgba(255, 90, 95, .9);
+}
+
+/*locations and amenities*/
+.locations,
+.amenities {
+    display: inline-block;
+    height: 100%;
+    width: 25%;
+}
+/*locations*/
+.locations{
+    border-right: 1px solid #dddddd;
+}
+
+/* places header*/
+.filters h2,
+.filters h3,
+.filters h4 {
+    -webkit-box-sizing: border-box;
+      -moz-box-sizing: border.box;
+            box-sizing: border-box;
+            margin: 0;
+}
+/* Header 3 style */
+.filters h3 {
+    font-size: 1.17em;
+    font-weight: 600;
+    height: 50%;
+    padding: 15.5px 0 0 30px;
+}
+.filters h4 {
+    font-size: 14px;
+    font-weight: 400;
+    height: 50%;
+    padding: 5px 0 12px 30px;
 }
