--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,27 +1,25 @@
-.places {
-    font-size: 30px;
-    padding-left: 30px;
-    text-align: center;
+/*
+ * === Places class style ===
+ */
+
+/* Places style */
+.places article {
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #ff5a5f;
+	border-radius: 4px;
+	display: inline-block;
 }
 
 .places h1 {
-    text-align: left;
-    margin: 15px;
-}
-
-h2 {
-    text-align: center;
-}
-
-article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    display: inline-block;
-}
-
-article h2 {
-    font-size: 30px;
+	font-size: 30px;
+	font-weight: bold;
+	width: 100%;
+	margin: .67em 0 .67em 0;
+}	
+.places h2 {
+	font-size: 30px ;
+	font-weight: bold;
+	text-align: center;
 }
